--- a/Rxing-full-urltest.ini
+++ b/Rxing-full-urltest.ini
@@ -4,7 +4,9 @@ surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/mas
 surge_ruleset=🛑 广告拦截,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 surge_ruleset=🍃 应用净化,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 surge_ruleset=📢 谷歌FCM,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+surge_ruleset=🚀 全局设置,https://raw.githubusercontent.com/Rui-xing/Custom-Rules/main/DaiLi.list#自定义代理列表
 surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+surge_ruleset=🎯 国内网络,https://raw.githubusercontent.com/Rui-xing/Custom-Rules/main/ZhiLian.list#自定义直连列表
 surge_ruleset=Ⓜ️ 微软云盘,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 surge_ruleset=🍎 苹果服务,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 surge_ruleset=📲 Telegram,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
