--- a/Rxing-full-urltest.ini
+++ b/Rxing-full-urltest.ini
@@ -30,33 +30,29 @@ surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/mas
 surge_ruleset=🎯 国内网络,[]GEOIP,CN
 surge_ruleset=🐼 つつ,https://cdn.statically.io/gh/lhl77/sub-ini/master/tsutsuDomain.list
 surge_ruleset=🐟 其他网站,[]FINAL
-custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
+custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[] 🐼 香港节点` 🗽 美国节点`[]DIRECT
 custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 国内网络`select`[]DIRECT`[]🚀 全局设置
-custom_proxy_group=🤖 ChatGPT`select`[]🐱 新日美Auto`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 港台Auto
+custom_proxy_group=🤖 ChatGPT`select` 🗽 美国节点``[]🚀 手动选择
 custom_proxy_group=📹 Youtube`select`[]🚀 全局设置`[]♻️ 自动选择`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🚀 手动选择
-custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🚀 手动选择
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 全局设置`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 全局设置`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🚀 全局设置`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🚀 全局设置`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🐼 つつ`select`[]🚀 全局设置`[]🇨🇳 港台Auto`[]🐱 新日美Auto`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[] 🐼 香港节点`[]🚀 手动选择
+custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[] 🐼 香港节点`[]🚀 手动选择
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 全局设置` 🗽 美国节点`[] 🐼 香港节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 全局设置` 🗽 美国节点`[] 🐼 香港节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🚀 全局设置` 🗽 美国节点`[] 🐼 香港节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🚀 全局设置`[] 🐼 香港节点` 🗽 美国节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[] 🐼 香港节点` 🗽 美国节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🐼 つつ`select`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=📲 Telegram`select`[]🚀 全局设置`[]♻️ 自动选择`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎮 国际游戏`select`[]🚀 全局设置`[]🇨🇳 港台Auto`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎮 国际游戏`select`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=📺 巴哈姆特`select`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 其他网站`select`[]🚀 全局设置`[]♻️ 自动选择`[]DIRECT`
-custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡节点`url-test`(新|新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🐱 新日美Auto`url-test`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇳 港台Auto`url-test`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🐼 香港节点`url-test`(港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🐵 英国节点`url-test`(英|伦敦|🇬🇧)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🗽 美国节点`url-test`(美|阿什本|圣何塞|🇺🇸)`http://www.gstatic.com/generate_204`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
