--- a/Rxing-full-urltest.ini
+++ b/Rxing-full-urltest.ini
@@ -30,19 +30,19 @@ surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/mas
 surge_ruleset=🎯 国内网络,[]GEOIP,CN
 surge_ruleset=🐼 つつ,https://cdn.statically.io/gh/lhl77/sub-ini/master/tsutsuDomain.list
 surge_ruleset=🐟 其他网站,[]FINAL
-custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[] 🐼 香港节点` 🗽 美国节点`[]DIRECT
+custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🐼 香港节点` 🗽 美国节点`[]DIRECT
 custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 国内网络`select`[]DIRECT`[]🚀 全局设置
 custom_proxy_group=🤖 ChatGPT`select` 🗽 美国节点``[]🚀 手动选择
 custom_proxy_group=📹 Youtube`select`[]🚀 全局设置`[]♻️ 自动选择`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[] 🐼 香港节点`[]🚀 手动选择
-custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[] 🐼 香港节点`[]🚀 手动选择
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 全局设置` 🗽 美国节点`[] 🐼 香港节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 全局设置` 🗽 美国节点`[] 🐼 香港节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🚀 全局设置` 🗽 美国节点`[] 🐼 香港节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🚀 全局设置`[] 🐼 香港节点` 🗽 美国节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[] 🐼 香港节点` 🗽 美国节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🐼 香港节点`[]🚀 手动选择
+custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[]🐼 香港节点`[]🚀 手动选择
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 全局设置`[]🗽 美国节点`[]🐼 香港节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 全局设置`[]🗽 美国节点`[]🐼 香港节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🚀 全局设置`[]🗽 美国节点`[]🐼 香港节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🚀 全局设置`[]🐼 香港节点`[]🗽 美国节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[]🐼 香港节点`[]🗽 美国节点`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🐼 つつ`select`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=📲 Telegram`select`[]🚀 全局设置`[]♻️ 自动选择`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🎮 国际游戏`select`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
