--- a/Rxing-full-urltest.ini
+++ b/Rxing-full-urltest.ini
@@ -1,34 +1,34 @@
 [custom]
-surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-surge_ruleset=🛑 广告拦截,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-surge_ruleset=🍃 应用净化,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-surge_ruleset=📢 谷歌FCM,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-surge_ruleset=🚀 全局设置,https://raw.githubusercontent.com/Rui-xing/Custom-Rules/main/DaiLi.list#自定义代理列表
-surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-surge_ruleset=🎯 国内网络,https://raw.githubusercontent.com/Rui-xing/Custom-Rules/main/ZhiLian.list#自定义直连列表
-surge_ruleset=Ⓜ️ 微软云盘,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-surge_ruleset=🍎 苹果服务,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-surge_ruleset=📲 Telegram,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-surge_ruleset=🤖 ChatGPT,https://cdn.statically.io/gh/lhl77/sub-ini/main/openai.list
-surge_ruleset=🎶 网易音乐,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
-surge_ruleset=🎮 国际游戏,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-surge_ruleset=🎮 国际游戏,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
-surge_ruleset=🎮 国际游戏,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-surge_ruleset=📹 Youtube,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-surge_ruleset=🎥 Netflix,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-surge_ruleset=📺 巴哈姆特,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
-surge_ruleset=🌏 国内媒体,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-surge_ruleset=🌍 国外媒体,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-surge_ruleset=🌏 出海媒体,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-surge_ruleset=🌏 出海媒体,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/IqiyiHMT.list
-surge_ruleset=🚀 全局设置,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-surge_ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Download.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/LocalAreaNetwork.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/UnBan.list
+surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanAD.list
+surge_ruleset=🍃 应用净化,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanProgramAD.list
+surge_ruleset=📢 谷歌FCM,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/GoogleFCM.list
+surge_ruleset=🚀 全局设置,https://cdn.jsdelivr.net/gh/Rui-xing/Custom-Rules@main/DaiLi.list#自定义代理列表
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/GoogleCN.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/Rui-xing/Custom-Rules@main/ZhiLian.list#自定义直连列表
+surge_ruleset=Ⓜ️ 微软云盘,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/OneDrive.list
+surge_ruleset=🍎 苹果服务,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Apple.list
+surge_ruleset=📲 Telegram,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Telegram.list
+surge_ruleset=🤖 ChatGPT,https://cdn.jsdelivr.net/gh/lhl77/sub-ini@main/openai.list
+surge_ruleset=🎶 网易音乐,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/NetEaseMusic.list
+surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Epic.list
+surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Sony.list
+surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Steam.list
+surge_ruleset=📹 Youtube,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/YouTube.list
+surge_ruleset=🎥 Netflix,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Netflix.list
+surge_ruleset=📺 巴哈姆特,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Bahamut.list
+surge_ruleset=🌏 国内媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaMedia.list
+surge_ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ProxyMedia.list
+surge_ruleset=🌏 出海媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/BilibiliHMT.list
+surge_ruleset=🌏 出海媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/IqiyiHMT.list
+surge_ruleset=🚀 全局设置,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ProxyGFWlist.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaIp.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaDomain.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaCompanyIp.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Download.list
 surge_ruleset=🎯 国内网络,[]GEOIP,CN
-surge_ruleset=🐼 つつ,https://cdn.statically.io/gh/lhl77/sub-ini/master/tsutsuDomain.list
+surge_ruleset=🐼 つつ,https://cdn.jsdelivr.net/gh/lhl77/sub-ini@master/tsutsuDomain.list
 surge_ruleset=🐟 其他网站,[]FINAL
 custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🐼 香港节点`[]🗽 美国节点`[]DIRECT
 custom_proxy_group=🚀 手动选择`select`.*
