--- a/Rxing-full-urltest.ini
+++ b/Rxing-full-urltest.ini
@@ -2,22 +2,20 @@
 surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/LocalAreaNetwork.list
 surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/UnBan.list
 surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanAD.list
+surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@refs/heads/master/rule/Clash/Advertising/Advertising.list
 surge_ruleset=🍃 应用净化,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanProgramAD.list
-surge_ruleset=📢 谷歌FCM,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/GoogleFCM.list
 surge_ruleset=🚀 全局设置,https://cdn.jsdelivr.net/gh/Rui-xing/Custom-Rules@main/DaiLi.list#自定义代理列表
 surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/GoogleCN.list
 surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/Rui-xing/Custom-Rules@main/ZhiLian.list#自定义直连列表
 surge_ruleset=Ⓜ️ 微软云盘,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/OneDrive.list
 surge_ruleset=🍎 苹果服务,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Apple.list
-surge_ruleset=📲 Telegram,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Telegram.list
+surge_ruleset=📲 Telegram,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@refs/heads/master/rule/Clash/Telegram/Telegram.list
 surge_ruleset=🤖 ChatGPT,https://cdn.jsdelivr.net/gh/lhl77/sub-ini@main/openai.list
-surge_ruleset=🎶 网易音乐,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/NetEaseMusic.list
 surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Epic.list
 surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Sony.list
 surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Steam.list
 surge_ruleset=📹 Youtube,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/YouTube.list
 surge_ruleset=🎥 Netflix,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Netflix.list
-surge_ruleset=📺 巴哈姆特,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Bahamut.list
 surge_ruleset=🌏 国内媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaMedia.list
 surge_ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ProxyMedia.list
 surge_ruleset=🌏 出海媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/BilibiliHMT.list
@@ -46,12 +44,11 @@ custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[]🐼 香港节
 custom_proxy_group=🐼 つつ`select`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=📲 Telegram`select`[]🚀 全局设置`[]♻️ 自动选择`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🎮 国际游戏`select`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=📺 巴哈姆特`select`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎶 网易音乐`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 其他网站`select`[]🚀 全局设置`[]♻️ 自动选择`[]DIRECT`
 custom_proxy_group=🐼 香港节点`url-test`(港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🐼 台湾节点`url-test`(台|TW|🇹🇼)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🐵 英国节点`url-test`(英|伦敦|🇬🇧)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🗽 美国节点`url-test`(美|阿什本|圣何塞|🇺🇸)`http://www.gstatic.com/generate_204`300,,50
 enable_rule_generator=true
