--- a/Rxing-full-urltest.ini
+++ b/Rxing-full-urltest.ini
@@ -1,43 +1,34 @@
 [custom]
-surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/LocalAreaNetwork.list
-surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/UnBan.list
-surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanAD.list
-surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@refs/heads/master/rule/Clash/Advertising/Advertising.list
-surge_ruleset=🍃 应用净化,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanProgramAD.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.list
+surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Advertising/Advertising.list
 surge_ruleset=🚀 全局设置,https://cdn.jsdelivr.net/gh/Rui-xing/Custom-Rules@main/DaiLi.list#自定义代理列表
-surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/GoogleCN.list
 surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/Rui-xing/Custom-Rules@main/ZhiLian.list#自定义直连列表
-surge_ruleset=Ⓜ️ 微软云盘,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/OneDrive.list
-surge_ruleset=🍎 苹果服务,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Apple.list
+surge_ruleset=🍎 苹果服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple.list
 surge_ruleset=📲 Telegram,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@refs/heads/master/rule/Clash/Telegram/Telegram.list
-surge_ruleset=🤖 ChatGPT,https://cdn.jsdelivr.net/gh/lhl77/sub-ini@main/openai.list
-surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Epic.list
-surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Sony.list
-surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Steam.list
-surge_ruleset=📹 Youtube,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/YouTube.list
-surge_ruleset=🎥 Netflix,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/Netflix.list
-surge_ruleset=🌏 国内媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaMedia.list
-surge_ruleset=🌍 国外媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ProxyMedia.list
-surge_ruleset=🌏 出海媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/BilibiliHMT.list
-surge_ruleset=🌏 出海媒体,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Ruleset/IqiyiHMT.list
-surge_ruleset=🚀 全局设置,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ProxyGFWlist.list
-surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaIp.list
-surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaDomain.list
-surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/ChinaCompanyIp.list
-surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/Download.list
+surge_ruleset=🤖 ChatGPT,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI.list
+surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Epic/Epic.list
+surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Sony/Sony.list
+surge_ruleset=🎮 国际游戏,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.list
+surge_ruleset=📹 Youtube,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube.list
+surge_ruleset=🎥 Netflix,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Netflix/Netflix.list
+surge_ruleset=🌏 国内媒体,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaMedia/ChinaMedia.list
+surge_ruleset=🌏 出海媒体,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBiliIntl/BiliBiliIntl.list
+surge_ruleset=🌏 出海媒体,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/iQIYIIntl/iQIYIIntl.list
+surge_ruleset=🚀 全局设置,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Download/Download.list
 surge_ruleset=🎯 国内网络,[]GEOIP,CN
 surge_ruleset=🐼 つつ,https://cdn.jsdelivr.net/gh/lhl77/sub-ini@master/tsutsuDomain.list
 surge_ruleset=🐟 其他网站,[]FINAL
-custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🐼 香港节点`[]🗽 美国节点`[]DIRECT
+custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🐼 香港节点`[]🐼 台湾节点`[]🗽 美国节点`[]DIRECT
 custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 国内网络`select`[]DIRECT`[]🚀 全局设置
 custom_proxy_group=🤖 ChatGPT`select`[]🗽 美国节点`[]🚀 手动选择
 custom_proxy_group=📹 Youtube`select`[]🚀 全局设置`[]♻️ 自动选择`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🐼 香港节点`[]🚀 手动选择
-custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[]🐼 香港节点`[]🚀 手动选择
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 全局设置`[]🗽 美国节点`[]🐼 香港节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 全局设置`[]🗽 美国节点`[]🐼 香港节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[]🐼 香港节点`[]🐼 台湾节点`[]🚀 手动选择
 custom_proxy_group=🍎 苹果服务`select`[]🚀 全局设置`[]🗽 美国节点`[]🐼 香港节点`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]🚀 全局设置`[]🐼 香港节点`[]🗽 美国节点`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[]🐼 香港节点`[]🗽 美国节点`[]🚀 手动选择`[]DIRECT
@@ -45,7 +36,6 @@ custom_proxy_group=🐼 つつ`select`[]🚀 全局设置`[]🚀 手动选择`[]
 custom_proxy_group=📲 Telegram`select`[]🚀 全局设置`[]♻️ 自动选择`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🎮 国际游戏`select`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 其他网站`select`[]🚀 全局设置`[]♻️ 自动选择`[]DIRECT`
 custom_proxy_group=🐼 香港节点`url-test`(港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🐼 台湾节点`url-test`(台|TW|🇹🇼)`http://www.gstatic.com/generate_204`300,,50
