--- a/Rxing-full-urltest.ini
+++ b/Rxing-full-urltest.ini
@@ -1,8 +1,9 @@
 [custom]
 surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.list
 surge_ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Advertising/Advertising.list
-surge_ruleset=🚀 全局设置,https://cdn.jsdelivr.net/gh/Rui-xing/Custom-Rules@main/DaiLi.list#自定义代理列表
-surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/Rui-xing/Custom-Rules@main/ZhiLian.list#自定义直连列表
+surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Advertising/Advertising.list
+surge_ruleset=🚀 全局设置,https://cdn.jsdelivr.net/gh/Rui-xing/Custom-Rules@main/DaiLi.list
+surge_ruleset=🎯 国内网络,https://cdn.jsdelivr.net/gh/Rui-xing/Custom-Rules@main/ZhiLian.list
 surge_ruleset=🍎 苹果服务,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple.list
 surge_ruleset=📲 Telegram,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@refs/heads/master/rule/Clash/Telegram/Telegram.list
 surge_ruleset=🤖 ChatGPT,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI.list
